src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__app_detail_instances.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌app detail────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│web · default                                                                                                         │
│ Overview  │ [Instances] │  Logs  │  Metrics  │  Deploys  │  Config                                                   │
│                                                                                                                      │
│NODE         ID                       STATE         RESTARTS  HOST PORT  PID                                          │
│node-1       web-0                    running              0       8000  1000                                         │
│node-2       web-1                    running              0       8000  1001                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
