src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__app_detail_metrics.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌app detail────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│web · default                                                                                                         │
│ Overview  │  Instances  │  Logs  │ [Metrics] │  Deploys  │  Config                                                   │
│                                                                                                                      │
│CPU     ▁█                                                                                                            │
│Memory  ▁                                                                                                             │
│15:06:38 process_cpu_percent                   12.00                                                                  │
│15:06:39 process_cpu_percent                   28.00                                                                  │
│15:06:40 process_memory_bytes                  64.00                                                                  │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
